en/identity-server/6.0.0/docs/get-started/quick-start-guide.md
# What is WSO2 Identity Server? 

Are you new to **WSO2 Identity Server**? Let's get to know what we are all about! 

**WSO2 Identity Server (WSO2 IS)** simplifies the Customer Identity and Access Management (CIAM) needs of your organization. The product ensures easy integration with a variety of applications to facilitate single sign-on (SSO), social login, identity federation, API security, strong authentication, account management, privacy compliance, and so much more. 

<iframe width="800" height="250" src="https://www.youtube.com/embed/QUlcGOOdXU8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>

## Who uses WSO2 Identity Server?

- **Application developers** who build extensive IAM solutions for organizations.

- **Administrators** or **Team leaders** looking for an easy but secure way to onboard and manage users. 

- **Data Protection Officers** who need to implement and monitor a system that adheres to privacy protection regulations across the organization

- **Insight managers** who need precise data on logins, registrations, and user activities to derive business insights.

---

## Why WSO2 Identity Server?

![IAM functionality]({{base_path}}/assets/img/guides/iam-functionality.png)

- **Unify sign-ins** -  WSO2 IS facilitates single sign-on (SSO) that eliminates the need to maintain multiple credentials for each application making life easier for your users.

- **Give the right access to the right people** - Control access to applications based on permission levels of users or groups.

- **Enforce strong authentication** - WSO2 Identity Server offers multi-factor capabilities such as Email OTP, SMS OTP, Security Key/Biometrics (FIDO) etc. It also enables adaptive authentication which means you can define the level of authentication based on user device, location, and usage context.

- **Empower users to manage their own accounts** - Enable self-registration to applications and let users view, and manage their own profiles.

- **Manage users and their accounts** - Take control of the entire identity lifecycle management of your organization. Provision users to or from trusted identity providers and integrate heterogeneous userstores such as LDAP, Active Directory, and JDBC.

- **Secure ever-growing APIs** - WSO2 Identity Server plays a key role as the authorization server that supports several OAuth related standards or profiles. It supports open standards such as OAuth, OpenID Connect, SAML 2.0, and XACML. It also enables high availability, failover, and performance for a smooth operation. 


- **To safeguard user data and give them control over it** - WSO2 Identity Server enables recording, reviewing, and revoking user consents by adhering to privacy by design principles and industry standards imposed by GDPR and similar privacy laws such as CCPA and LGPD.

---
