en/identity-server/7.0.0/docs/get-started/quick-start-guide.md
# What is {{ product_name }}?

Are you new to **{{ product_name }}**? Let's get to know what we are all about!

**{{ product_name }} (WSO2 IS)** simplifies the Customer Identity and Access Management (CIAM) needs of your organization. The product ensures easy integration with a variety of applications to facilitate single sign-on (SSO), social login, identity federation, API security, strong authentication, account management, privacy compliance, and so much more.

<div style="width: 100%; min-width: 300px; max-width: 700px;">
<div style="position: relative; width: 100%; overflow: hidden; padding-top: 56.25%;">
<p><iframe style="position: absolute; top: 0; left: 0; right: 0; width: 100%; height: 100%; border: none;" src="https://www.youtube.com/embed/QUlcGOOdXU8" width="560" height="315" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></p>
</div>
</div>

## Who uses {{ product_name }}?

- **Application developers** who build extensive IAM solutions for organizations.

- **Administrators** or **Team leaders** looking for an easy but secure way to onboard and manage users.

- **Data Protection Officers** who need to implement and monitor a system that adheres to privacy protection regulations across the organization

- **Insight managers** who need precise data on logins, registrations, and user activities to derive business insights.

---

## Why {{ product_name }}?

![IAM functionality]({{base_path}}/assets/img/get-started/iam-functionality.png)

- **Unify sign-ins** - WSO2 IS facilitates single sign-on (SSO) that eliminates the need to maintain multiple credentials for each application, making life easier for your users.

- **Give the right access to the right people** - Control access to applications based on permission levels of users or groups.

- **Enforce strong authentication** - {{ product_name }} offers multi-factor capabilities such as Email OTP, SMS OTP, FIDO Passkeys etc. It also enables adaptive authentication, which means you can define the level of authentication based on user's device, location, and usage context.

- **Empower users to manage their own accounts** - Enable self-registration to applications and let users view and manage their own profiles.

- **Manage users and their accounts** - Take control of the entire identity lifecycle management of your organization. Provision users to or from trusted identity providers and integrate heterogeneous user stores such as LDAP, Active Directory, and JDBC.

- **Secure ever-growing APIs** - {{ product_name }} plays a key role as the authorization server that supports several OAuth-related standards or profiles. It supports open standards such as OAuth, OpenID Connect and SAML 2.0. It also enables high availability, failover, and performance for smooth operation.


- **To safeguard user data and give them control over it** - {{ product_name }} enables recording, reviewing, and revoking user consents by adhering to privacy by design principles and industry standards imposed by GDPR and similar privacy laws such as CCPA and LGPD.

---